# MyImage

./: CMakeLists.txt  README.md  image.cpp  image.hpp  main.cpp
